# Orpheus

./: .gitignore  CMakeLists.txt
src/: events.h  filesystem_model.cpp  filesystem_model.h  filesystem_view.cpp  filesystem_view.h  iplaylist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orpheus.cpp  orpheus.h  orpheus.ui  playlist_factory.cpp  playlist_factory.h  playlist_m3u8.cpp  playlist_m3u8.h  playlist_model.cpp  playlist_model.h  playlist_view.cpp  playlist_view.h  playlistmodel.cpp  playlistmodel.h  playlisttree.cpp  playlisttree.h
